--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "~4.3.5"
   },
+  "overrides": {
+    "@types/react": "~18.0.14"
+  },
   "private": true
 }
